fix meter migration and use enums (AR and postgres)
