# app/models/meter/base.rb
@@ -17,22 +17,42 @@ module Meter
     MID_LEVEL = 'E05' # mid_level
     HIGH_LEVEL = 'E04' # high_level
     HIGHEST_LEVEL = 'E03' # highest_level
+    enum edifact_voltage_level: {
+           low_level:     LOW_LEVEL,
+           mid_level:     MID_LEVEL,
+           high_level:    HIGH_LEVEL,
+           highest_level: HIGHEST_LEVEL,
+         }
     VOLTAGE_LEVELS = [LOW_LEVEL, MID_LEVEL, HIGH_LEVEL, HIGHEST_LEVEL]
 
     # cycle intervals
     MONTHLY = 'MONTHLY'
-    YEARLY = 'YEARLY'
     QUARTERLY = 'QUARTERLY'
     HALF_YEARLY = 'HALF_YEARLY'
+    YEARLY = 'YEARLY'
+    enum edifact_cycle_interval: {
+           monthly:     MONTHLY,
+           quarterly:   QUARTERLY,
+           half_yearly: HALF_YEARLY,
+           yearly:      YEARLY,
+         }
     CYCLE_INTERVALS = [MONTHLY, YEARLY, QUARTERLY, HALF_YEARLY]
 
     # metering type
     ANALOG_HOUSEHOLD_METER = 'AHZ' # analog_household_meter
-    LOAD_METER = 'LAZ' # load_meter - Lastgangzähler
     ANALOG_AC_METER = 'WSZ' # analog_ac_meter - Wechselstromzähler
-    DIGITAL_HOUSEHOLD_METER = 'EHZ' # digital_household_meter
+    LOAD_METER = 'LAZ' # load_meter - Lastgangzähler
     MAXIMUM_METER = 'MAZ' # maximum_meter
+    DIGITAL_HOUSEHOLD_METER = 'EHZ' # digital_household_meter
     INDIVIDUAL_ADJUSTMENT = 'IVA' # individual_adjustment
+    enum edifact_metering_type: {
+           analog_household_meter:  ANALOG_HOUSEHOLD_METER ,
+           analog_ac_meter:         ANALOG_AC_METER,
+           load_meter:              LOAD_METER,
+           maximum_meter:           MAXIMUM_METER,
+           digital_household_meter: DIGITAL_HOUSEHOLD_METER,
+           individual_adjustment:   INDIVIDUAL_ADJUSTMENT,
+         }
     METERING_TYPES = [ANALOG_HOUSEHOLD_METER, LOAD_METER,
                       ANALOG_AC_METER, DIGITAL_HOUSEHOLD_METER, MAXIMUM_METER,
                       INDIVIDUAL_ADJUSTMENT]
@@ -41,25 +61,52 @@ module Meter
     EDL40 = 'Z01' # edl40
     EDL21 = 'Z02' # edl21
     OTHER_EHZ = 'Z03' # other_ehz
+    enum edifact_meter_size: {
+           edl40: EDL40,
+           edl21: EDL21,
+           other_ehz: OTHER_EHZ,
+         }
     METER_SIZES = [EDL40, EDL21, OTHER_EHZ]
 
     # tariffs
-    ONE_TARIFF = 'ETZ' # single tariff
-    TWO_TARIFFS = 'ZTZ' # dual tariffs
-    MULTIPLE_TARIFFS = 'NTZ' # multi tariffs
-    TARIFFS = [ONE_TARIFF, TWO_TARIFFS, MULTIPLE_TARIFFS]
+    SINGLE_TARIFF = 'ETZ' # single tariff
+    DUAL_TARIFF = 'ZTZ' # dual tariffs
+    MULTI_TARIFF = 'NTZ' # multi tariffs
+    enum edifact_tariff: {
+           single_tariff: SINGLE_TARIFF,
+           dual_tariff:   DUAL_TARIFF,
+           multi_tariff:  MULTI_TARIFF,
+         }
+    TARIFFS = [SINGLE_TARIFF, DUAL_TARIFF, MULTI_TARIFF]
 
     # data loggings
-    REMOTE = 'AMR' # remote
-    MANUAL = 'MMR' # manual
-    DATA_LOGGINGS = [REMOTE, MANUAL]
+    ANALOG = 'Z04'
+    ELECTRONIC = 'Z05'
+    enum edifact_data_logging: {
+           analog:     ANALOG,
+           electronic: ELECTRONIC,
+         }
+    DATA_LOGGINGS = [ANALOG, ELECTRONIC]
+
+    # measurement methods
+    REMOTE = 'AMR'
+    MANUAL = 'MMR'
+    enum edifact_measurement_method: {
+           remote: REMOTE,
+           manual: MANUAL,
+         }
     MEASUREMENT_METHODS = [REMOTE, MANUAL]
 
     # mounting methods
     PLUG_TECHNIQUE = 'BKE' # plug_technique
-    THREE_POINT_HANGING = 'DPA' # three point mounting
+    THREE_POINT_MOUNTING = 'DPA' # three point mounting
     CAP_RAIL = 'HS' # cap_rail - Hutschiene
-    MOUNTING_METHODS = [PLUG_TECHNIQUE, THREE_POINT_HANGING, CAP_RAIL]
+    enum edifact_mounting_method: {
+           plug_technique:       PLUG_TECHNIQUE,
+           three_point_mounting: THREE_POINT_MOUNTING,
+           cap_rail:             CAP_RAIL,
+         }
+    MOUNTING_METHODS = [PLUG_TECHNIQUE, THREE_POINT_MOUNTING, CAP_RAIL]
 
     # ownerships
     BUZZN_SYSTEMS = 'BUZZN_SYSTEMS'
@@ -67,16 +114,22 @@ module Meter
     CUSTOMER = 'CUSTOMER'
     LEASED = 'LEASED'
     BOUGHT = 'BOUGHT'
+    enum ownership: {
+           buzzn_systems:     BUZZN_SYSTEMS,
+           foreign_ownership: FOREIGN_OWNERSHIP,
+           customer:          CUSTOMER,
+           leased:            LEASED,
+           bought:            BOUGHT
+         }
     OWNERSHIPS = [BUZZN_SYSTEMS, FOREIGN_OWNERSHIP, CUSTOMER, LEASED, BOUGHT]
-
-    # direction numbers
-    ONE_WAY_METER = 'ERZ' # one_way_meter
-    TWO_WAY_METER = 'ZRZ' # two_way_meter
-    DIRECTION_NUMBERS = [ONE_WAY_METER, TWO_WAY_METER]
 
     # sections
     ELECTRICITY = 'S'
     GAS = 'G'
+    enum section: {
+           electricity: ELECTRICITY,
+           gas:         GAS
+         }
     SECTIONS = [ELECTRICITY, GAS]
 
     has_one :broker, as: :resource, dependent: :destroy, foreign_key: :resource_id, class_name: 'Broker::Base'
@@ -88,16 +141,6 @@ module Meter
     validates :build_year, presence: false
     validates :calibrated_until, presence: false
     validates :edifact_measurement_method, presence: false
-    validates :edifact_voltage_level, inclusion: {in: VOLTAGE_LEVELS}, if: 'edifact_voltage_level.present?'
-    validates :edifact_cycle_interval, inclusion: {in: CYCLE_INTERVALS}, if: 'edifact_cycle_interval.present?'
-    validates :edifact_metering_type, inclusion: {in: METERING_TYPES}, if: 'edifact_metering_type.present?'
-    validates :edifact_meter_size, inclusion: {in: METER_SIZES}, if: 'edifact_meter_size.present?'
-    validates :edifact_tariff, inclusion: {in: TARIFFS}, if: 'edifact_tariff.present?'
-    validates :edifact_data_logging, inclusion: {in: DATA_LOGGINGS}, if: 'edifact_data_logging.present?'
-    validates :edifact_measurement_method, inclusion: {in: MEASUREMENT_METHODS}, if: 'edifact_measurement_method.present?'
-    validates :edifact_mounting_method, inclusion: {in: MOUNTING_METHODS}, if: 'edifact_mounting_method.present?'
-    validates :ownership, inclusion: {in: OWNERSHIPS}, if: 'ownership.present?'
-    validates :edifact_section, inclusion: {in: SECTIONS}, if: 'edifact_section.present?'
 
     validate :validate_invariants
 
@@ -113,7 +156,7 @@ module Meter
     end
 
     def self.search_attributes
-      [:manufacturer_name, :product_name, :product_serialnumber]
+      [:product_name, :product_serialnumber]
     end
 
     def self.filter(value)
